force-app/main/default/objects/Property__c/Property__c.object-meta.xml
<CustomObject>
    <description>Represents a real estate property listing</description>
    <label>Property</label>
    <nameField>
        <label>Property Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Properties</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>