force-app/main/default/objects/Property__c/fields/Feels_Like_F__c.field-meta.xml
<CustomField>
    <fullName>Feels_Like_F__c</fullName>
    <label>Feels Like (F)</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>