force-app/main/default/objects/Property__c/fields/High_Temp_F__c.field-meta.xml
<CustomField>
    <fullName>High_Temp_F__c</fullName>
    <label>High Temp (F)</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>