force-app/main/default/objects/Property__c/fields/Highest_Offer__c.field-meta.xml
<CustomField>
    <fullName>Highest_Offer__c</fullName>
    <label>Highest Offer</label>
    <summarizedField>Offer__c.Offer_Amount__c</summarizedField>
    <summaryForeignKey>Offer__c.Property__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>