force-app/main/default/objects/Property__c/fields/Humidity__c.field-meta.xml
<CustomField>
    <fullName>Humidity__c</fullName>
    <label>Humidity</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>