force-app/main/default/objects/Property__c/fields/Low_Temp_F__c.field-meta.xml
<CustomField>
    <fullName>Low_Temp_F__c</fullName>
    <label>Low Temp (F)</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>