force-app/main/default/objects/Property__c/fields/Temperature_F__c.field-meta.xml
<CustomField>
    <fullName>Temperature_F__c</fullName>
    <label>Temperature (F)</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>