force-app/main/default/objects/Property__c/fields/Total_Active_Offers__c.field-meta.xml
<CustomField>
    <fullName>Total_Active_Offers__c</fullName>
    <label>Total Active Offers</label>
    <summaryFilterItems>
        <field>Offer__c.Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </summaryFilterItems>
    <summaryForeignKey>Offer__c.Property__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>