force-app/main/default/objects/Property__c/fields/Total_Offers__c.field-meta.xml
<CustomField>
    <fullName>Total_Offers__c</fullName>
    <label>Total Offers</label>
    <summaryForeignKey>Offer__c.Property__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>