force-app/main/default/objects/Property__c/fields/UV_Index__c.field-meta.xml
<CustomField>
    <fullName>UV_Index__c</fullName>
    <label>UV Index</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>