force-app/main/default/objects/Property__c/fields/Weather_Icon_URL__c.field-meta.xml
<CustomField>
    <fullName>Weather_Icon_URL__c</fullName>
    <label>Weather Icon URL</label>
    <type>Url</type>
</CustomField>