force-app/main/default/objects/Property__c/fields/Weather_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Weather_Last_Updated__c</fullName>
    <label>Weather Last Updated</label>
    <type>DateTime</type>
</CustomField>