force-app/main/default/objects/Property__c/fields/Wind_Speed_mph__c.field-meta.xml
<CustomField>
    <fullName>Wind_Speed_mph__c</fullName>
    <label>Wind Speed (mph)</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>