force-app/main/default/objects/Property__c/validationRules/Close_Date_Cannot_Be_Past.validationRule-meta.xml
<ValidationRule>
    <fullName>Close_Date_Cannot_Be_Past</fullName>
    <active>true</active>
    <errorConditionFormula>Close_Date__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>Close_Date__c</errorDisplayField>
    <errorMessage>Close Date cannot be in the past</errorMessage>
</ValidationRule>