force-app/main/default/objects/Property__c/validationRules/Price_Must_Be_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Price_Must_Be_Positive</fullName>
    <active>true</active>
    <errorConditionFormula>Price__c  &lt;= 0</errorConditionFormula>
    <errorDisplayField>Price__c</errorDisplayField>
    <errorMessage>Price must be greater than zero</errorMessage>
</ValidationRule>