force-app/main/default/objects/Property__c/listViews/Active_Listings.listView-meta.xml
<ListView>
    <fullName>Active_Listings</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Agent__c</columns>
    <columns>Address__c</columns>
    <columns>Bathrooms__c</columns>
    <columns>Bedrooms__c</columns>
    <columns>Price__c</columns>
    <columns>Total_Active_Offers__c</columns>
    <columns>Listed_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Listings</label>
</ListView>